--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+warp = "0.3"
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
